first push at rendering map with markers

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="author" content="Dmitri Voronianski">
+	<meta name="author" content="Oringial:Dmitri Voronianski Updated: Ishan">
 	<title>Real-Time Geolocation Service with Node.js</title>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="./css/styles.css">
@@ -15,8 +15,8 @@
 <body>
 	<div class="wrapper">
 	  <header>
-	  	<h1>Real-Time Geolocation Service with Node.js</h1>
-	  	<div class="description">Using the HTML5 Geolocation API and Web Sockets to show the locations of visitors in real-time.</div>
+	  	<h1>Trending activities</h1>
+	  	<div class="description">Check out what like-minded people are upto and join in!</div>
 	  </header>
 
 	  <div class="app">
